# comp-intelligence

./: .gitignore  README.md
OPHS/: .gitignore  CMakeLists.txt  README.md
OPHS/include/: config.h  config.h.in  config.hpp  constructive.hpp  graph.h  graph.hpp  plotSolution.py  sa.hpp  types_inc.hpp  utils.h  utils.hpp
OPHS/output/: 100-150-15-10.ophs.txt  100-190-15-10.ophs.txt  100-200-10-4.ophs.txt  64-45-1-2.ophs.txt  66-129-10-6.ophs.txt  66-130-12-6.ophs.txt  66-50-6-4.ophs.txt
OPHS/src/: constructive.cpp  graph.cpp  main.cpp  sa.cpp
VRP-FRCD/: .gitignore  CMakeLists.txt
VRP-FRCD/include/: config.h.in  cuckoo.hpp  instance.hpp  neighborhood.hpp  utils.hpp  vehicle.hpp
VRP-FRCD/input/: instance-set1-1.txt  instance-set1-10.txt  instance-set1-11.txt  instance-set1-12.txt  instance-set1-13.txt  instance-set1-14.txt  instance-set1-15.txt  instance-set1-16.txt  instance-set1-17.txt  instance-set1-18.txt  instance-set1-19.txt  instance-set1-2.txt  instance-set1-20.txt  instance-set1-21.txt  instance-set1-22.txt  instance-set1-23.txt  instance-set1-24.txt  instance-set1-25.txt  instance-set1-26.txt  instance-set1-27.txt  instance-set1-28.txt  instance-set1-29.txt  instance-set1-3.txt  instance-set1-30.txt  instance-set1-4.txt  instance-set1-5.txt  instance-set1-6.txt  instance-set1-7.txt  instance-set1-8.txt  instance-set1-9.txt  instance-set2-1.txt  instance-set2-10.txt  instance-set2-11.txt  instance-set2-12.txt  instance-set2-13.txt  instance-set2-14.txt  instance-set2-15.txt  instance-set2-16.txt  instance-set2-17.txt  instance-set2-18.txt  (+50 more)
(+128 files in other folders)
